All translations implemented

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,15 +1,47 @@
 {
+  "actions": "Actions",
   "add_station": "Add station",
   "admin_user": "Admin user",
+  "administration_url": "Administration URL",
   "back": "Back",
+  "close": "Close",
   "configuration": "Configuration",
   "continue": "Continue",
+  "default": "Default",
+  "description": "Description",
   "display_name": "Display name",
+  "edit": "Edit",
+  "edit_station": "Edit station",
   "email": "Email",
+  "genre": "Genre",
+  "home": "Home",
+  "incomplete": "Incomplete",
+  "information": "Information",
+  "initial": "Initial",
   "instance_name": "Instance name",
+  "language": "Language",
+  "listeners": "Listeners",
+  "listeners_peak": "Listeners peak",
   "login": "Login",
+  "logout": "Log out",
+  "maximum_listeners": "Maximum listeners",
+  "mount_point": "Mount point",
+  "msg_success": "Successfully update",
+  "name": "Name",
+  "not_found": "Not found",
+  "optional": "Optional",
   "password": "Password",
+  "port": "Port",
+  "remove": "Remove",
+  "restart": "Restart",
+  "running": "Running",
   "save": "Save",
+  "start": "Start",
+  "stations": "Stations",
+  "statistics": "Statistics",
+  "stop": "Stop",
+  "stopped": "Stopped",
+  "update": "Update",
   "url_base": "Base URL of the site",
   "username": "Username"
 }
