--- a/locales/es.json
+++ b/locales/es.json
@@ -1,15 +1,47 @@
 {
+  "actions": "Acciones",
   "add_station": "Añadir emisora",
   "admin_user": "Usuario administrador",
+  "administration_url": "Dirección URL de administración",
   "back": "Atrás",
+  "close": "Cerrar",
   "configuration": "Configuración",
   "continue": "Continuar",
+  "default": "Predeterminado",
+  "description": "Descripción",
   "display_name": "Nombre a mostrar",
+  "edit": "Editar",
+  "edit_station": "Editar emisora",
   "email": "Correo electrónico",
+  "genre": "Género",
+  "home": "Inicio",
+  "incomplete": "Incompleto",
+  "information": "Información",
+  "initial": "Inicial",
   "instance_name": "Nombre de la instancia ",
+  "language": "Idioma",
+  "listeners": "Oyentes",
+  "listeners_peak": "Pico de oyentes",
   "login": "Iniciar sesión",
+  "logout": "Cerrar sesión",
+  "maximum_listeners": "Máximo de oyentes",
+  "mount_point": "Punto de montaje",
+  "msg_success": "Actualizado correctamente",
+  "name": "Nombre",
+  "not_found": "No encontrado",
+  "optional": "Opcional",
   "password": "Contraseña",
+  "port": "Puerto",
+  "remove": "Eliminar",
+  "restart": "Reiniciar",
+  "running": "En ejecución",
   "save": "Guardar",
+  "start": "Iniciar",
+  "stations": "Emisoras",
+  "statistics": "Estadísticas",
+  "stop": "Detener",
+  "stopped": "Detenido",
+  "update": "Actualizar",
   "url_base": "URL base del sitio",
   "username": "Nombre de usuario"
 }
