--- a/locales/es.json
+++ b/locales/es.json
@@ -36,6 +36,7 @@
   "optional": "Opcional",
   "password": "Contraseña",
   "port": "Puerto",
+  "profile": "Perfil",
   "remove": "Eliminar",
   "restart": "Reiniciar",
   "running": "En ejecución",
